fix jumping site when search is opened

--- a/packages/xy-shared/styles/globals.css
+++ b/packages/xy-shared/styles/globals.css
@@ -269,7 +269,7 @@ article.nextra-content ol li p {
 }
 
 .body .DocSearch--active {
-  margin-inline-end: 0;
+  margin-inline-end: 0 !important;
 }
 
 /* 7. DocSearch */
